# Pixie-Particles

./: README.md
Pixie/: CMakeLists.txt
Pixie-build/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  Pixie.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Pixie-build/Win32/Debug/ALL_BUILD/ALL_BUILD.tlog/: custombuild.read.1.tlog  custombuild.write.1.tlog
Pixie-build/Win32/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: ZERO_CHECK.lastbuildstate  custombuild.command.1.tlog  custombuild.read.1.tlog  custombuild.write.1.tlog
Pixie-build/Win32/Release/ALL_BUILD/ALL_BUILD.tlog/: custombuild.command.1.tlog
Pixie-build/src/: INSTALL.vcxproj  INSTALL.vcxproj.filters  Makefile  PixieParticles.vcxproj  PixieParticles.vcxproj.filters  cmake_install.cmake
Pixie-build/src/PixieParticles.dir/Debug/PixieParticles.tlog/: cl.command.1.tlog  cl.read.1.tlog  cl.write.1.tlog  custombuild.write.1.tlog  link.command.1.tlog
Pixie-build/src/PixieParticles.dir/Release/PixieParticles.tlog/: CL.read.1.tlog  CL.write.1.tlog  PixieParticles.lastbuildstate  cl.command.1.tlog  custombuild.command.1.tlog  custombuild.read.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Pixie/src/: CMakeLists.txt  Emitter.cpp  Emitter.h  Particle.cpp  Particle.h  ParticleSystem.cpp  ParticleSystem.h  main.cpp
